24. Different settings for skip backward and skip forward.
25. Save interface settings even if dialog closed bty system back button or
    'Esc' key.
26. Fix Composers, Conductors, and Bands not showing in MAI track info.
27. Fix artist name and album cover not showing when click on "Browse",
    "Go to album", or "+N more" links in now-playing/MAI.

4.1.5
-----
 1. Reduce size of playing indicator in players menu.
 2. Fix clicking on MAI links for touch devices.
 3. Rename 'Radio' buttons to 'Create Mix' in menu as well as toolbar.
 4. Only show 'Create Mix' button if view is 800px or more wide.
 5. If navigate back into previous list then try to restore position.
 6. Try to avoid scenario of browse "..." toolbar menu only having 1 item.
 7. Remove sort options from 'Random Albums' and 'New Music'.
 8. Clear text selection if close menu.
 9. Force word-break if required in MAI view.
10. Fix wrong menu showing when select bio/review text in browse view.
11. Show artist and album names at top of respective MAI view.
12. Add genres to end of MAI artist, and album, information in browse
    view.

4.1.4
-----
 1. Fix drag'n'drop of home screen items.
 2. Sharper add/play hover icons.
 3. Fix some SVG icons not showing.
 4. Fix add/play actions not showing for some lists.
 5. Try to detect Spotify track list even when called from 'trackinfo'
 6. Change 'Biography' and 'Review' button labels to 'Information', as MAI's
    album info is more info than review.
 7. Remove all tracks from queue via long-press on clear button.
 8. Fix missing service logos.
 9. Rename 'Radio' buttons to 'Create Mix'.
10. Add 'Similar artists' list to end of MAI artist information in browse
    view.
11. Follow links by default, don't show menu.
12. Attempt to intercept text selection menu in MAI browse, and allow to copy
    or search.

4.1.3
-----
 1. Update some dependencies (Axios, Vue, Vuex).
 2. Fix clipping of menu button highlight when installed as a chrome webapp and